# app/swagger/easytex.yml
@@ -135,6 +135,28 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       tags: [notes]
+  /notes/search:
+    post:
+      summary: Поиск заметок
+      responses:
+        '200':
+          description: Ответ при успешном поиске
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NoteSearchResponse'
+        '500':
+          description: Ответ при ошибке на стороне сервера
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SearchRequest'
+      tags: [notes]
   /dirs:
     post:
       summary: Создание папки
@@ -181,7 +203,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       tags: [dirs]
-
     put:
       summary: Обновление папки по ID
       parameters:
@@ -273,7 +294,6 @@ paths:
                   type: string
                   format: binary
       tags: [images]
-
   /recognizer/formula:
     post:
       responses:
@@ -302,7 +322,6 @@ paths:
                   type: string
                   format: binary
       tags: [recognizer]
-
   /recognizer/text:
     post:
       responses:
@@ -365,6 +384,44 @@ paths:
       tags: [recognizer]
 components:
   schemas:
+    NoteSearchResponse:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/NoteSearchItem'
+      required: [items]
+    NoteSearchItem:
+      properties:
+        noteId:
+          type: number
+          format: int32
+          example: 1
+          x-isnullable: false
+        name:
+          type: string
+          description: Название заметки
+          example: TestName
+          x-isnullable: false
+        bodyHighlight:
+          type: array
+          items:
+            type: string
+        nameHighlight:
+          type: array
+          items:
+            type: string
+      required: [noteId, name, bodyHighlight, nameHighlight]
+    SearchRequest:
+      type: object
+      properties:
+        query:
+          type: string
+          description: Поисковый запрос
+          example: Новая заметка
+          x-isnullable: false
+      required: [query]
     Dir:
       type: object
       properties:
@@ -373,7 +430,7 @@ components:
           format: int32
           description: Числовой идентификатор папки
           example: 1337
-          x-isnullable: flase
+          x-isnullable: false
         name:
           type: string
           description: Название папки
@@ -384,13 +441,18 @@ components:
           format: int32
           description: Числовой идентификатор создателя папки
           example: 1337
-          x-isnullable: flase
+          x-isnullable: false
         parentDir:
           type: number
           format: int32
           description: Числовой идентификатор родительской папки
           example: 1337
-          x-isnullable: flase
+          x-isnullable: false
+        iconUrl:
+          type: string
+          description: Ссылка на URL иконки
+          example: ''
+          x-isnullable: false
         subdirs:
           x-isnullable: true
           type: array
@@ -403,8 +465,8 @@ components:
           type: number
           format: int32
           description: ID заметки
-          example: 1337
-          x-isnullable: flase
+          example: 1
+          x-isnullable: false
         name:
           type: string
           description: |
@@ -430,12 +492,12 @@ components:
           format: int32
           description: ID папки, которой принадлежит заметка
           x-isnullable: false
-          example: 1337
+          example: 1
         userId:
           type: number
           format: int32
           description: ID пользователя, которому принадлежит заметка
-          example: 1337
+          example: 1
           x-isnullable: false
     NotePreview:
       type: object
@@ -445,7 +507,7 @@ components:
           format: int32
           description: ID заметки
           example: 1337
-          x-isnullable: flase
+          x-isnullable: false
         name:
           type: string
           description: |
